# dns

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  blacklist.txt  data.rs  domain.rs  mod.rs  prelude.rs  subdomain.rs  validity.rs
.github/workflows/: test-and-build.yml
crates/db/: Cargo.toml
crates/db/src/: lib.rs
crates/db/src/sources/: mod.rs
crates/db/src/sources/sqlite/: mod.rs  repository.rs
crates/db/src/sources/sqlite/models/: data.rs  mod.rs  subdomain.rs  validity.rs
crates/db/src/traits/: data.rs  domain.rs  mod.rs  repository.rs  subdomain.rs  validity.rs
crates/db/tests/: data.rs  domain.rs  subdomain.rs  validity.rs
crates/dns-utils/: Cargo.toml
crates/shared/: Cargo.toml
crates/xdns-data/: Cargo.toml
crates/xdns-data/src/: lib.rs
crates/xdns-data/src/algorithms/: dilithium.rs  dilithium2.rs  ed25519.rs  mod.rs
crates/xdns-data/src/models/: algorithm.rs  credentials.rs  data.rs  domain.rs  drop.rs  mod.rs  signature.rs  subdomain.rs  validity.rs  validity_transfer.rs
crates/xdns-data/src/parser/: action.rs  data.rs  domain.rs  drop.rs  inscription.rs  mod.rs  signature.rs  subdomain.rs  validity.rs  validity_transfer.rs
crates/xdns-data/src/traits/: mod.rs  parser.rs  verify.rs
crates/xdns-data/tests/: message_signing.rs  parse_action.rs  parse_data.rs  parse_domain.rs  parse_drop.rs  parse_inscription.rs  parse_signature.rs  parse_subdomain.rs  parse_validity.rs  parse_validity_transfer.rs
entity/: Cargo.toml
entity/src/: data.rs  domain.rs  lib.rs  (+4 more)
migration/: Cargo.toml
src/: main.rs
xdns/: Cargo.toml
(+32 files in other folders)
