[package]
name = "db"
version = "0.0.1"
edition = "2021"


[dependencies]
xdns_data = {path = "../xdns-data"}
shared = {path = "../shared"}
entity = {path = "../../entity" }
migration = {path = "../../migration" }
chrono = "0.4.26"
sea-orm = { version = "0.11.3", features = ["sqlx-sqlite", "macros", "runtime-tokio-rustls"] }
futures = "0.3.28"
log = "0.4.19"
tokio = { version = "1.29.1", features = ["macros"] }
