[package]
name = "xdns_data"
version = "0.0.1"
edition = "2021"
description="Data structures for xdns, also includes parsing"

[dependencies]
ed25519-dalek = "2.0.0-rc.3"
hex = "0.4.3"
hex-literal = "0.4.1"
paste = "1.0.13"
pqcrypto = "0.16.1"
pqcrypto-dilithium = "0.4.6"
pqcrypto-traits = "0.3.4"
shared = {path = "../shared"}
